# portfoliobacktester

./: .env  .env.example  .gitignore  README.md  RSI-DMI-MACD-ADX-CMF_Momentum_Strategy_NSE_ANANDRATHI_2025-09-20.csv  Web Application Context and Research.docx  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml
api/: __init__.py  pyproject.toml  setup.cfg
api/app/: __init__.py  db.py  deps.py  main.py
api/app/core/: config.py  logging.py
api/app/models/: schemas.py  tables.py
api/app/routers/: analytics.py  backtests.py  billing.py  feedback.py  portfolio.py  sessions.py  uploads.py  users.py
api/app/services/: auth.py  backtests.py  feedback.py  ingest.py  portfolio.py  storage.py
api/portfolio_backtester_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
api/tests/: test_api_endpoints.py  test_config.py  test_ingest.py  test_portfolio.py  test_storage.py
app/: .env  .env.local.example  middleware.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.mts  vitest.config.ts
app/app/: layout.tsx  page.tsx  robots.ts  sitemap.ts
app/components/: analytics-tracker.tsx  csv-upload.d.ts  (+13 more)
docs/: multi-symbol-portfolio-backtesting-plan.md
examples/: Momentum_EQ1_2024-01-01.csv  Momentum_EQ2_2024-01-01.csv  Momentum_EQ3_2024-01-01.csv  README.md
infra/: Dockerfile.api  Dockerfile.web  docker-compose.yml  nginx.conf
prisma/: schema.prisma
scripts/: docker-compose-config.sh  vercel-deploy.sh
web/: package.json  tsconfig.base.json
(+71 files in other folders)
