[metadata]
name = portfolio-backtester-api
version = 0.1.0
description = FastAPI backend for TradingView portfolio backtesting

[options]
packages = find:
install_requires =
    fastapi>=0.105
    uvicorn[standard]>=0.24
    pandas>=2.1
    numpy>=1.26
    python-multipart>=0.0.6
    sqlalchemy>=2.0
    psycopg[binary]>=3.1
    alembic>=1.12
    pydantic>=2.4
    pydantic-settings>=2.0
    boto3>=1.28
    python-dateutil>=2.8
    tenacity>=8.2
    bcrypt>=4.0
python_requires = >=3.11
include_package_data = True

[options.extras_require]
dev =
    pytest>=7.4
    pytest-asyncio>=0.21
    httpx>=0.25
    moto[s3]>=4.2
